--- a/packages/zeitline/example/index.html
+++ b/packages/zeitline/example/index.html
@@ -3,17 +3,17 @@
 <title>Zeitline</title>
 <style>
 body {
-  padding-top: 8%;
+  /* padding-top: 8%; */
   transition: background-color .3s ease;
 }
 
-g[data-label-start="test6"] rect {
+/* g[data-label-start="test6"] rect {
     fill: #ff0000;
 }
 
 .event {
   fill: #4249ae;
-  /*transition: fill .2s ease-out;*/
+  /*transition: fill .2s ease-out;* /
 }
 
 .event:hover {
@@ -33,13 +33,13 @@ g[data-label-start="test6"] rect {
   shape-rendering: crispEdges;
   stroke-dasharray: 6.7;
   stroke-linecap: round;
-}
+} */
 
-.wrapper {
+/* .wrapper {
   text-align: center;
-}
+} */
 
-.axis--x .domain {
+/* .axis--x .domain {
   stroke: #e4e4e4;
   stroke-width: 4;
   stroke-linecap: round;
@@ -54,9 +54,9 @@ g[data-label-start="test6"] rect {
   stroke: rgba(180, 180, 180, .5);
   stroke-width: 1;
   stroke-linecap: round;
-}
+} */
 
-button {
+/* button {
   padding: 8px 16px;
   font-weight: bold;
   border: 2px solid #444;
@@ -68,7 +68,7 @@ button {
 
 .controlbar {
   margin: 30px auto;
-}
+} */
 </style>
 <body>
   <div class="wrapper">
